feat: Upgrade javafx and repair the compile error on Linux